[tool.poetry]
name = "ml-exploration"
version = "0.1.0"
description = ""
authors = ["Philip Hierhager <philip.hierhager@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.29.0"
scikit-image = "^0.24.0"
opencv-python = "^4.10.0.84"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
mahotas = "^1.4.18"
opencv-contrib-python = "^4.10.0.84"
pywavelets = "^1.7.0"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
